--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -37,6 +37,12 @@
                 <p>Coming Soon</p>
             </article>
 
+            <article>
+                <div style="text-align: center;">
+                    <img src="/img/icon.png" />
+                </div>
+            </article>
+
         </div>
 
     </body>
