--- a/backend/static/products.html
+++ b/backend/static/products.html
@@ -43,7 +43,12 @@
                     <input type="submit" value="Search" />
                 </fieldset>
 
-                <div :aria-busy="listOfProducts === null ? 'true':'false'" style="width: 100%; height: 100%;">
+                <div style="width: 100%; height: 100%;">
+                    <div x-show="isLoading">
+                        <h2>Searching our inventory...</h2>
+                        <progress />
+                    </div>
+
                     <template x-for="p in listOfProducts">
                         <article class="productCard" data-theme="dark">
                             <header x-text="p.name"></header>
@@ -52,9 +57,11 @@
                             <footer x-text="p.price"></footer>
                         </article>
                     </template>
-                    <article x-show="listOfProducts.length === 0" class="productCard" data-theme="dark">
+
+                    <article x-show="listOfProducts.length === 0 && !isLoading" class="productCard" data-theme="dark">
                         No products found
                     </article>
+                    
                     <div style="clear:both;">&nbsp;</div>
                 </div>
             </article>
