--- a/backend/static/about.html
+++ b/backend/static/about.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="products.html">Product Catalog</a></li><li><a href="products.html">Product Catalog</a></li>
+                    <li><a href="products.html">Product Catalog</a></li>
                 </ul>
             </nav>
 
@@ -39,9 +39,9 @@
             </article>
 
             <article>
-                <div style="text-align: center;">
-                    <img src="/img/icon.png" />
-                </div>
+                <h1>About Us</h1>
+                <p>Our company may be fake, but our database problems are real.</p>
+                <p>Everything seems slow. Take a look at our product catalog and see for yourself.</p>
             </article>
 
         </div>
