--- a/backend/static/products.html
+++ b/backend/static/products.html
@@ -27,6 +27,8 @@
                 </ul>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Product Catalog</a></li>
                 </ul>
             </nav>
 
@@ -61,7 +63,7 @@
                     <article x-show="listOfProducts.length === 0 && !isLoading" class="productCard" data-theme="dark">
                         No products found
                     </article>
-                    
+
                     <div style="clear:both;">&nbsp;</div>
                 </div>
             </article>
