--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="products.html">Product Catalog</a></li><li><a href="products.html">Product Catalog</a></li>
+                    <li><a href="products.html">Product Catalog</a></li>
                 </ul>
             </nav>
 
