--- a/backend/static/about.html
+++ b/backend/static/about.html
@@ -38,7 +38,7 @@
                 <p>International Heating and Cooling Technolgies</p>
             </article>
 
-            <article>
+            <article class="mainCtr">
                 <h1>About Us</h1>
                 <p>Our company may be fake, but our database problems are real.</p>
                 <p>Everything seems slow. Take a look at our product catalog and see for yourself.</p>
