separate js per page

--- a/backend/static/products.html
+++ b/backend/static/products.html
@@ -15,7 +15,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
         <link rel="manifest" href="/img/site.webmanifest">
 
-        <script src="/js/init.js"></script>
+        <script src="/js/products.js"></script>
         <script src="/js/components.js"></script>
         <link rel="stylesheet" href="/css/custom.css" />
 
