--- a/backend/static/products.html
+++ b/backend/static/products.html
@@ -21,7 +21,7 @@
 
     </head>
     <body data-theme="light">
-        <form x-data="init()" x-init="loadList" data-theme="light" class="container" @submit.prevent="searchThoseProducts">
+        <div x-data="init()" x-init="loadAll" data-theme="light" class="container" >
             <nav data-theme="dark">
                 <ul>
                     <li><img height="32" src="/img/icon.png" style="height: 32px !important;" /></li>
@@ -36,16 +36,28 @@
 
             <article class="mainCtr">
                 <h1>Products</h1>
-                <fieldset role="group">
-                    <input
-                        type="search"
-                        name="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                        x-model="searchTerm"
-                        />
-                    <input type="submit" value="Search" />
-                </fieldset>
+                
+                <div>
+                    <fieldset role="group">
+                        <input
+                            type="search"
+                            name="search"
+                            placeholder="Search"
+                            aria-label="Search"
+                            x-model="searchTerm"
+                            />
+                        <button x-on:click="searchThoseProducts">Search</button>
+                    </fieldset>
+                    <div class="grid" style="margin-bottom: 1rem;">
+                        <template x-for="f in listOfFacets">
+                            <div>
+                                <span x-text="f"></span>                            
+                                <input x-model="selectedFacets" type="checkbox" :value="f" />
+                                <br />
+                            </div>
+                        </template>
+                    </div>
+                </div>
 
                 <div style="width: 100%; height: 100%;">
                     <div x-show="isLoading">
@@ -111,7 +123,7 @@
                 </article>
             </dialog>
 
-        </form>
+        </div>
 
     </body>
 </html>
