--- a/backend/static/products.html
+++ b/backend/static/products.html
@@ -56,14 +56,14 @@
                                 <br />
                             </div>
                         </template>
-                    </div>
+                    </div>                    
+                    <progress x-show="listOfFacets.length === 0"></progress>
                 </div>
 
                 <div style="width: 100%; height: 100%;">
                     <div x-show="isLoading">
                         <h2 x-show="searchTerm.length === 0">Loading our inventory...</h2>
                         <h2 x-show="searchTerm.length > 0">Searching our inventory...</h2>
-                        <progress></progress>
 
                         <skeleton-card></skeleton-card>
                         <skeleton-card></skeleton-card>
