--- a/backend/static/about.html
+++ b/backend/static/about.html
@@ -42,6 +42,14 @@
                 <h1>About Us</h1>
                 <p>Our company may be fake, but our database problems are real.</p>
                 <p>Everything seems slow. Take a look at our product catalog and see for yourself.</p>
+
+                <h1>World-Wide Scale</h1>
+                <p>We are proud to be the world's largest ecommerce solution focused on keeping people comfortable.</p>
+                <p>We serve 200M users world wide (direct customers, companies, and contractors) with 10M transactions per day.</p>
+                <p>Our global reach is unprecedented with US sales making up 40%, EU sales at 40%, South America and LATAM at 10% and APAC at 10%.</p>
+            
+                <h1>Technology Leading</h1>
+                <p>Our massive catalog is powered by our cloud-first initiatives to bring heating and cooling into the 21st century.</p>
             </article>
 
         </div>
