--- a/backend/static/about.html
+++ b/backend/static/about.html
@@ -41,7 +41,8 @@
             <article class="mainCtr">
                 <h1>About Us</h1>
                 <p>Our company may be fake, but our database problems are real.</p>
-                <p>Everything seems slow. Take a look at our product catalog and see for yourself.</p>
+                <p>Everything seems slow. Take a look at our product catalog and see for yourself. It is slow and has bad results.</p>
+                <p>And since we operate everything in batches, there is a high chance you will be able to buy something and find out it is out of stock later. And it will take a while to ship.</p>
 
                 <h1>World-Wide Scale</h1>
                 <p>We are proud to be the world's largest ecommerce solution focused on keeping people comfortable.</p>
