--- a/backend/static/panel.html
+++ b/backend/static/panel.html
@@ -43,9 +43,9 @@
                     <header><h3>Meeting format</h3></header>
                     <ul>
                         <li>Background - 15 mins</li>
-                        <li>role play 60 mins (he will assign)</li>
-                        <li>feedback - 5-10 mins</li>
-                        <li>3 things - remaining time</li>
+                        <li>Role Play - 60 mins (Candidate is supposed to assign our roles) and hard stop at 60 min mark</li>
+                        <li>Feedback - 5-10 mins</li>
+                        <li>3 Things - remaining time</li>
                     </ul>
                 </article>
 
