--- a/backend/static/panel.html
+++ b/backend/static/panel.html
@@ -85,7 +85,7 @@
                         <li>Tech Stack:
                             <ul>
                                 <li>We are a Python shop and some things also done in C#</li>
-                                <li>We deploy on AWS today</li>
+                                <li>We deploy on AWS today, open to more clouds (including Oracle Cloud)</li>
                                 <li>On Microsoft SQL today</li>
                                 <li>Security conscious so want to use private networking</li>
                             </ul>
@@ -96,7 +96,7 @@
                                 <li>Sending shipping notifications and more is a manual process</li>
                                 <li>One group of the company uses Kafka to send payment data from the ecommerce side to the CRM side. We host this connector manually today.</li>
                                 <li>Would like to get more real time insights and dashboards</li>
-                                <li>Some items on our site commonly require additional things to purchase along with it (connectors, tools, etc) so adding a recommendation engine is desireable</li>
+                                <li>Some items on our site commonly require additional things to purchase along with it (connectors, tools, etc) so adding a recommendation engine is desirable</li>
                             </ul>
                         </li>
                         <li>For Search Interviews:
