--- a/backend/static/panel.html
+++ b/backend/static/panel.html
@@ -113,11 +113,18 @@
                         <li>For Performance Interviews:
                             <ul>
                                 <li>We do not have a search engine today. We "achieve" it by using SQL %LIKE% statements</li>
-                                <li>Some items on our site commonly require additional things to purchase along with it (connectors, tools, etc) so adding a recommendation engine is desireable</li>
                                 <li>Our performance testing used Locust. It did not coorelate any DB metrics with Datadog, Grafana, etc</li>
                                 <li>We can not guarantee that the test harness was not the bottle neck in the testing versus the DB</li>
-                                <li>Our test harness was in US EAST 1 but the DB was in APAC as that is where our lab is located</li>
-                                <li>We took the data model directly from our SQL Server so it will contain lots of $lookup</li>
+                                <li>Our test harness was in US EAST 1 but the DB was an M0 in APAC as that is where our lab is located</li>
+                                <li>We took the data model directly from our SQL Server for our catalog use case so it will contain lots of $lookup for read. We used Compass to import</li>
+                                <li>No indexes beyond the auto-created _id on import</li>
+                                <li>Queries were generated for the reads on the catalog collection via COmpass AI tool</li>
+                                <li>Workload type:
+                                    <ul>
+                                        <li>Catalog is mostly reads</li>
+                                        <li>Fullfilment is mostly writes and updates, so much so we should move to a streaming system</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                     </ul>
